# exemple-SC-2526

./: pyproject.toml
src/exemple_sc_2526/: __init__.py  data.py  resolution.py
tests/: test_data.py  test_resolution.py
